# multi-ai-cli

./: .gitignore  LICENSE  README.md  multi_ai_cli.ini.example  multi_ai_cli.py  pyproject.toml
scripts/: code_review.sh  generate_docs.sh  generate_testcode.sh  test_scenario.sh
src/multi_ai_cli/: __init__.py  config.py  engines.py  handlers.py  main.py  parsers.py  utils.py  version.py
tests/: test_config.py  test_engines.py  test_handlers.py  test_main.py  test_parsers.py  test_utils.py  test_version.py
tests/unit/: test_config.py  test_engines.py  test_handlers.py  test_main.py  test_parsers.py  test_utils.py  test_version.py
